[gd_scene load_steps=13 format=3 uid="uid://coprshyr0naui"]

[ext_resource type="Script" uid="uid://baveb1db0rsnj" path="res://scripts/growing_zone.gd" id="1_0yq1v"]
[ext_resource type="Texture2D" uid="uid://boaaxbrg026j1" path="res://assets/farmingTilesheetComplete.png" id="2_1k53b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lk4l3"]
atlas = ExtResource("2_1k53b")
region = Rect2(64, 112, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_nq1x4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lk4l3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sju1w"]
size = Vector2(42, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqnt4"]
atlas = ExtResource("2_1k53b")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4mpf"]
atlas = ExtResource("2_1k53b")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pom2k"]
atlas = ExtResource("2_1k53b")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qh4ob"]
atlas = ExtResource("2_1k53b")
region = Rect2(176, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tt3t1"]
atlas = ExtResource("2_1k53b")
region = Rect2(160, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1b5hg"]
atlas = ExtResource("2_1k53b")
region = Rect2(144, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_lt6is"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqnt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4mpf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pom2k")
}],
"loop": true,
"name": &"cabbage",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qh4ob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tt3t1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1b5hg")
}],
"loop": true,
"name": &"carrot",
"speed": 0.0
}, {
"frames": [],
"loop": true,
"name": &"none",
"speed": 5.0
}]

[node name="growing_zone" type="StaticBody2D"]
script = ExtResource("1_0yq1v")

[node name="fertilizer" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_nq1x4")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_sju1w")

[node name="plant" type="AnimatedSprite2D" parent="."]
position = Vector2(-5.9604645e-08, -14)
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_lt6is")
animation = &"none"

[node name="carrot_grow_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="cabbage_grow_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="timeout" from="carrot_grow_timer" to="." method="_on_carrot_grow_timer_timeout"]
[connection signal="timeout" from="cabbage_grow_timer" to="." method="_on_cabbage_grow_timer_timeout"]
